[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/FiraCode-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://apps/HatPad.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog"]
visible = true
margin_left = 135.0
margin_top = 76.0
margin_right = 1180.0
margin_bottom = 643.0
script = ExtResource( 2 )

[node name="Code" type="TextEdit" parent="."]
margin_left = 162.0
margin_right = 1045.0
margin_bottom = 567.0
custom_fonts/font = SubResource( 1 )
show_line_numbers = true

[node name="hapd" type="Control" parent="."]
margin_right = 162.0
margin_bottom = 567.0

[node name="Label" type="Label" parent="hapd"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -253.5
margin_right = 32.0
margin_bottom = -239.5
text = "Hatpad v1"

[node name="Save" type="Button" parent="hapd"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.5
margin_top = -93.0
margin_right = 35.5
margin_bottom = -68.0
text = "Save"

[node name="Load" type="Button" parent="hapd"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.5
margin_top = -60.0
margin_right = 35.5
margin_bottom = -35.0
text = "Load"

[node name="save" type="FileDialog" parent="."]
margin_left = 331.0
margin_top = 61.0
margin_right = 784.0
margin_bottom = 367.0
access = 1
current_dir = "user://C:/Users/seymo/Documents/OS"
current_path = "user://C:/Users/seymo/Documents/OS/"

[node name="load" type="FileDialog" parent="."]
margin_left = 331.0
margin_top = 61.0
margin_right = 784.0
margin_bottom = 367.0
window_title = "Open a File"
mode = 0
access = 1
current_dir = "user://C:/Users/seymo/Documents/OS"
current_path = "user://C:/Users/seymo/Documents/OS/"

[connection signal="pressed" from="hapd/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="hapd/Load" to="." method="_on_Load_pressed"]
[connection signal="file_selected" from="save" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="load" to="." method="_on_load_file_selected"]
